@@ -1,6 +1,7 @@
 2014-10-27  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Add printf support for format string a, A, and F.
+	* Handle embedded NULs correctly in printf.
 
 2014-10-13  Eric Blake <eblake@redhat.com>
 
